# demo_rust_microservice_simple

./: .env  Cargo.toml
form-base/: index.html
form-base/js/: index.js
src/: main.rs
