[package]
name = "rust_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="0.10.0"
futures="0.3.26"
hyper={ version = "0.14.25", features = ["full"] }
log="0.4.17"
tokio ="1.26.0"
