[package]
name = "demo_rust_microservice_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="0.10.0"
futures="0.3.26"
hyper={ version = "0.14.25", features = ["full"] }
log="0.4.17"
tokio ={version="1.25.0", features=["full"]}
anyhow="1.0.70"
serde_json="1.0.94"
serde= { version = "1.0.158", features = ["derive"] }
url="2.3.1"
mysql_async="0.31.3"
#mysql="23.0.1"
